[package]
name="phantom_core"
version="0.1.0"
edition = "2021"

[lib]
name="phantom_core"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.19", features = ["derive"] }
minecrevy_text = "0.1.0"
rand = {version = "0.8.5", features = ["small_rng"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
tokio = {version = "1.40.0", features = ["full"]}
tokio-postgres = {version = "0.7.12", features = ["with-serde_json-1"]}
